<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dis"
    tools:context=".RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivRegLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="55dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/logottt" />
            <TextView
                android:id="@+id/ivJoinUs"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/register"
                android:layout_marginBottom="15dp"
             />

            <AutoCompleteTextView
                android:id="@+id/atvfirstname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_person"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:hint="@string/first_name"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />

            <AutoCompleteTextView
                android:id="@+id/atvlastname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_person"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:hint="@string/last_name"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />

            <RadioGroup
                android:id="@+id/radio_gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/redio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    android:layout_marginRight="5dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/redio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    android:layout_marginRight="5dp"
                    android:text="@string/female" />

            </RadioGroup>

            <AutoCompleteTextView
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_person"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:hint="@string/mobile_no"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <Spinner
                android:id="@+id/city_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:paddingEnd="10dp" />

            <AutoCompleteTextView
                android:id="@+id/atvEmailReg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_mail"
                android:drawableLeft="@drawable/icon_mail"
                android:drawablePadding="10dp"
                android:hint="@string/emailReg"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />


            <AutoCompleteTextView
                android:id="@+id/atvPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/passwordReg"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />
            <AutoCompleteTextView
                android:id="@+id/atvcPasswordReg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableStart="@drawable/icon_password"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />


            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btnsignup_gradient"
                android:text="@string/sign_upReg"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/signin_redirect"
                android:textColor="#00FF00" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>
